--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "ps2mc"
-version = "0.1.0"
-description = "A PS2 memory card utilities library."
+version = "0.1.1"
+description = "A Python library for working with PlayStation 2 memory card files."
 authors = [{ name = "Lei", email = "caol64@gmail.com" }]
 readme = "README.md"
 requires-python = ">=3.10"
@@ -18,6 +18,9 @@ classifiers = [
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
+    "Programming Language :: Python :: 3.13",
     "Operating System :: OS Independent",
 ]
 
